# pdm-download

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/pdm_download/: __init__.py  command.py
tests/: test_download.py
tests/project/: pyproject.toml
