[project]
name = "pdm-download"
description = "A PDM plugin to download all packages in a lockfile for offline use."
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = [
    "rich>=13",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.entry-points.pdm]
download = "pdm_download:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pdm[pytest]>=2.10",
]
